# Suborbital

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/helloworld/: CMakeLists.txt  MyScene.py  main.cpp
examples/scripting/: CMakeLists.txt  ExampleAttribute.cpp  ExampleAttribute.hpp  ExampleScene.cpp  ExampleScene.hpp  main.cpp
examples/scripting/resources/scripts/: AttackRandomEnemyBehaviour.py  EntityDiedEvent.py  ExampleBehaviour.py  ExampleScene.py  ExampleSystem.py  HealthAttribute.py  Timer.py  TimerBehaviour.py
examples/scripting/swig/: ExampleAttribute.i  Scripting.i
include/suborbital/: Attribute.hpp  Behaviour.hpp  BehaviourFactory.hpp  BehaviourRegistry.hpp  Entity.hpp  EntityManager.hpp  EntitySet.hpp  NonCopyable.hpp  PythonBehaviour.hpp  PythonInterpreter.hpp  PythonObject.hpp  PythonRuntime.hpp  Scene.hpp  ScriptInterpreter.hpp  Suborbital.hpp  WatchPtr.hpp  Watchable.hpp  watch_ptr.hpp
include/suborbital/behaviour/: Behaviour.hpp  PythonBehaviour.hpp
include/suborbital/component/: Attribute.hpp  AttributeFactory.hpp  Behaviour.hpp  BehaviourFactory.hpp  Component.hpp  ComponentFactory.hpp  ComponentRegistry.hpp  ExampleAttribute.hpp  PythonAttribute.hpp  PythonAttributeFactory.hpp  PythonBehaviour.hpp  PythonBehaviourFactory.hpp  PythonComponent.hpp
include/suborbital/event/: Event.hpp  EventCallback.hpp  EventCallbackBase.hpp  EventDispatcher.hpp  EventSubscription.hpp  PythonEvent.hpp  PythonEventCallback.hpp
include/suborbital/scene/: PythonScene.hpp  PythonSceneFactory.hpp  Scene.hpp  SceneFactory.hpp  SceneStack.hpp  SpecificSceneFactory.hpp
include/suborbital/system/: PythonSystem.hpp  PythonSystemFactory.hpp  SpecificSystemFactory.hpp  System.hpp  SystemFactory.hpp  SystemRegistry.hpp
source/: CMakeLists.txt
source/suborbital/: Attribute.cpp  Behaviour.cpp  BehaviourRegistry.cpp  CMakeLists.txt  Component.cpp  Entity.cpp  EntityManager.cpp  EntitySet.cpp  PythonBehaviour.cpp  PythonInterpreter.cpp  PythonObject.cpp  Scene.cpp  ScriptInterpreter.cpp  Suborbital.cpp  WatchPtr.cpp  Watchable.cpp  watch_ptr.cpp
source/suborbital/behaviour/: Behaviour.cpp  PythonBehaviour.cpp
source/suborbital/component/: Attribute.cpp  Behaviour.cpp  Component.cpp  ComponentRegistry.cpp  ExampleAttribute.cpp  PythonAttribute.cpp  PythonBehaviour.cpp  PythonComponent.cpp
source/suborbital/event/: Event.cpp  EventCallback.cpp  EventCallbackBase.cpp  EventDispatcher.cpp  EventSubscription.cpp  PythonEvent.cpp  PythonEventCallback.cpp
source/suborbital/scene/: PythonScene.cpp  Scene.cpp  SceneStack.cpp
source/suborbital/system/: PythonSystem.cpp  System.cpp  SystemRegistry.cpp
swig/suborbital/: Behaviour.i  Component.i  Entity.i  EntityManager.i  EntitySet.i  Module.i  PythonBehaviour.i  PythonObject.i  Suborbital.i  WatchPtr.i  Watchable.i  std_weak_ptr.i  watch_ptr.i
swig/suborbital/behaviour/: Behaviour.i  PythonBehaviour.i
swig/suborbital/component/: Attribute.i  Behaviour.i  Component.i  ExampleAttribute.i  PythonAttribute.i  PythonBehaviour.i  PythonComponent.i
swig/suborbital/event/: Event.i  EventCallbackBase.i  EventSubscription.i  PythonEvent.i  PythonEventCallback.i
swig/suborbital/scene/: PythonScene.i  Scene.i
swig/suborbital/system/: PythonSystem.i  System.i
